--- a/index.html
+++ b/index.html
@@ -2172,19 +2172,6 @@
             /* Show button on desktop */
         }
 
-        @media (max-width: 714px) {
-            .video-feedback-grid {
-                justify-content: flex-start;
-            }
-        }
-
-        @media (max-width: 600px) {
-            .team-card {
-                width: 100%;
-                ;
-            }
-        }
-
         @media (max-width: 900px) {
             .power-by {
                 margin-top: 0px;
@@ -2301,6 +2288,25 @@
 
             .footer-col.active .chevron {
                 transform: rotate(180deg);
+            }
+        }
+
+          @media (max-width: 714px) {
+            .video-feedback-grid {
+                justify-content: flex-start;
+            }
+        }
+
+        @media (max-width: 600px) {
+            .team-card {
+                width: 100%;
+                ;
+            }
+        }
+
+         @media (max-width: 440px) {
+            .wa__popup_chat_box{
+                right: 2rem;
             }
         }
     </style>
@@ -3621,5 +3627,6 @@
 
 
 </body>
+
 
 </html>
