--- a/index.html
+++ b/index.html
@@ -1943,6 +1943,7 @@
             /* filter: grayscale(100%);  */
             transition: 0.8s ease;
             border-radius: 8px;
+            max-height: 420px;
         }
 
         .team-card:hover .team-img {
@@ -3630,3 +3631,4 @@
 
 
 </html>
+
