--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="robots" content="index, follow">
 
     <!-- CANONICAL -->
-    <link rel="canonical" href="https://nrwebworks.vercel.app/">
+    <link rel="canonical" href="https://nrwebworks.netlify.app/">
 
     <!-- FAVICON -->
     <link rel="icon" href="https://cdn.shopify.com/s/files/1/0717/7709/1742/files/Favicon.png?v=1764506868"
@@ -35,7 +35,7 @@
     <meta property="og:description"
         content="We build high-performing Shopify stores and ecommerce websites that convert visitors into customers worldwide.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://nrwebworks.vercel.app/">
+    <meta property="og:url" content="https://nrwebworks.netlify.app/">
     <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0717/7709/1742/files/Logo.png?v=1767423035">
 
     <!-- TWITTER -->
@@ -1943,7 +1943,7 @@
             /* filter: grayscale(100%);  */
             transition: 0.8s ease;
             border-radius: 8px;
-            max-height: 420px;
+            max-height: 400px;
         }
 
         .team-card:hover .team-img {
@@ -3631,4 +3631,5 @@
 
 
 </html>
+
 
