--- a/index.html
+++ b/index.html
@@ -1071,6 +1071,7 @@
             line-height: 1.2;
             color: var(--black);
             letter-spacing: -0.02em;
+            text-wrap: auto;
         }
 
         h1 {
@@ -3631,5 +3632,6 @@
 
 
 </html>
+
 
 
