--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="40S31sfAB2F62ztTIbRZipJzRSadhIoTtrMpZKoeMxc" />
 
     <!-- PRIMARY SEO TITLE -->
     <title>Professional Shopify Developer & Ecommerce Web Development Agency | NR Web Works</title>
@@ -3632,6 +3633,7 @@
 
 
 </html>
+
 
 
 
