--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="40S31sfAB2F62ztTIbRZipJzRSadhIoTtrMpZKoeMxc" />
 
@@ -3633,6 +3634,7 @@
 
 
 </html>
+
 
 
 
